syntax = "proto3";

package go.micro.service.processing;

// Events
message NewAccountCreated {
	string Uuid = 1;
	int64 timestamp = 2;
	string title = 3;
	string status = 4;
}
message NewAccountProcessed {
	string Uuid = 1;
	int64 timestamp = 2;
	string title = 3;
	string status = 4;
}
message GenericEvent {
	string msg = 1;
}

service Processing {
	rpc Call(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Request {
	string name = 1;
}

message Response {
	string msg = 1;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
